# WeChat-Qt-Maye

./: .gitignore  BubbleMsgDemo.rar  CMakeLists.txt  README.md  assets.qrc  main.cpp
SContacts/: ContactsAssets.qrc  ContactsInfo.cpp  ContactsInfo.h  SChatBubble.cpp  SChatBubble.h  SChatBubble_Label.cpp  SChatBubble_Label.h  SChatMessage.cpp  SChatMessage.h  SContactsListView.cpp  SContactsListView.h
SCustomWidgets/: SItemDelegate.cpp
SMainWindow/: SCenterStackedPage.cpp  SCenterStackedPage.h  SCenterStackedWidget.cpp  SCenterStackedWidget.h  SLeftToolBar.cpp  SLeftToolBar.h  SMainWindow.cpp  SMainWindow.h  SRightTopBar.cpp  SRightTopBar.h  SRightTopButton.cpp  SRightTopButton.h  SRightWidget.cpp  SRightWidget.h  SSearchWidget.cpp  SSearchWidget.h
SUtil/: SEventFilterObject.cpp  SEventFilterObject.h
